--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "k-12",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A module to help working with K-12 style grade ranges.",
   "main": "index.js",
   "scripts": {
@@ -12,5 +12,16 @@
   "devDependencies": {
     "jsdoc-to-markdown": "^1.3.3",
     "mocha": "^2.4.5"
-  }
+  },
+  "keywords": [
+    "k-12",
+    "k12",
+    "grades",
+    "kindergarten",
+    "pre-k",
+    "grade",
+    "k",
+    "12"
+  ]
 }
+
